required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Implemented support in for classifying rasters using the new
  expression parsing (msGetClass()...)  (#3663)

- Implemented RFC 65 which improves and simplifies one-pass query support. This causes
  a few MapScript regressions with getShape/getFeature/getResultsShape. (#3647)

- Support setting filenames for WCS GetCoverage results (#3665)

- OGR auto-styling: use the color parameter and set the style's opacity when it is available.
  Allow symbols that can be stored externally (#3660)

- Add possiblity to use symbols stored externally, accessed through http (#3662)

- Better handling of temporary files (#3354)

- Support curved features in PostGIS (#3621)

- NODATA values now excluded from autoscaling min/max for non-eight 
  scaling computations (#3650)

- Fixed missing time in msDrawMap logging (#3651)

- Fixed Auto Angle - incorrectly placed Labels (#3648)

- Fixed Improper validation of symbol index values (#3641)

- Removed BACKGROUNDCOLOR, BACKGROUNDSHADOWCOLOR and BACKGROUNDSHADOWOFFSET label parameters (#3609)

- Fixed Transformation from XML to MapFile only handles one PROCESSING element (#3631)

- Fixed 16bit classification support - problem introduced with new 
  renderer architecture (#3624) 

- Cleanup open gdal datasets in msGDALCleanup() (if we have a very new
  GDAL).  This makes it easier to identify memory leaks. 

- Add support for per layer tuning of the shape to pixel conversion (SIMPLIFY, ROUND,
  SNAPTOGRID, FULLRESOLUTION)

- Fixed: Memory allocation results should always be checked (#3559)

- Fixed free(): invalid next size in mapfile.c (#3604)
